--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -5,3 +5,10 @@
   background-color: #131316;
   color: #f2f2f3;
 }
+
+.main {
+  display: flex;
+  gap: 40px;
+  padding-left: calc((100vw - 1240px) / 2);
+  padding-right: calc((100vw - 1240px) / 2);
+}
