--- a/src/components/ingredients-list/ingredients-list.module.css
+++ b/src/components/ingredients-list/ingredients-list.module.css
@@ -1,22 +1,34 @@
+.container {
+  height: calc(100vh - 344px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: calc(var(--offset-base-size) * 4);
+}
+
+.bun {
+  flex-grow: 0;
+}
+
 .ingredients {
   height: calc(100vh - 536px);
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: calc(var(--offset-base-size) * 4);
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.ingredients::-webkit-scrollbar {
+.scroll::-webkit-scrollbar {
   width: 8px;
 }
 
-.ingredients::-webkit-scrollbar-track {
+.scroll::-webkit-scrollbar-track {
   background: #2F2F37;
 }
 
-.ingredients::-webkit-scrollbar-thumb {
+.scroll::-webkit-scrollbar-thumb {
   background: #8585AD;
 }
