--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -1,3 +1,10 @@
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
 .link {
   text-decoration: none;
 }
